--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types"
   },
   "dependencies": {
-    "payload": "^0.17.3",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "payload": "^0.17.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
