--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.6",
+    "payload-s3-upload": "^1.1.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
