--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.6",
-    "taiwonator/payload-s3-upload": "file:../payload-s3-upload",
+    "taiwonator/payload-s3-upload": "https://github.com/Taiwonator/payload-s3-upload.git",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
