--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@types/express": "^4.17.9",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "modified-payload-s3-upload": "^1.1.2",
     "nodemon": "^2.0.6",
-    "taiwonator/payload-s3-upload": "https://github.com/Taiwonator/payload-s3-upload.git",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
